objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>L2I_Airline_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For ad sales to choose the airline partners</description>
        <inlineHelpText>Please select your airline partner.</inlineHelpText>
        <label>Airline Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Airline</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Airline Partner</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_IntegrationMessage__c</fullName>
        <label>IntegrationMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_IntegrationStatus__c</fullName>
        <label>IntegrationStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_IntegrationStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Line_ExternalId__c</fullName>
        <label>Line ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_TotalCostperAircraft__c</fullName>
        <formula>SBQQ__QuoteLine__r.L2I_TotalCostperAircraft__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost per Aircraft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_TotalListperAircraft__c</fullName>
        <formula>SBQQ__QuoteLine__r.L2I_TotalListperAircraft__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total List per Aircraft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_TotalPriceperAircraft__c</fullName>
        <formula>SBQQ__QuoteLine__r.L2I_TotalPriceperAircraft__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>